add titles to improve search

--- a/docs/1._Getting_Started.md
+++ b/docs/1._Getting_Started.md
@@ -1,3 +1,4 @@
+# 1. Getting Started
 CoFE’s only dependency is [MATLAB](https://www.mathworks.com/products/matlab.html). There is nothing else to install – you just run it within MATLAB.
 
 ## Step 1. Acquire and Install MATLAB
