--- a/docs/2._Examples/b._Optimization/1._10-Bar_Truss_Sizing.md
+++ b/docs/2._Examples/b._Optimization/1._10-Bar_Truss_Sizing.md
@@ -1,3 +1,4 @@
+# 10-bar Truss Sizing
  The 10-bar truss model was developed for:
  >  Venkayya, V. B. (1971). "Design of Optimum Structures," Computers & Structures, 1(1), 265-309. 
 
