--- a/docs/2._Examples/b._Optimization/2._10-Bar_Truss_Shape_&_Sizing.md
+++ b/docs/2._Examples/b._Optimization/2._10-Bar_Truss_Shape_&_Sizing.md
@@ -1,3 +1,4 @@
+# 10-bar Truss Shape & Sizing
 The 10-bar truss optimization problem described [here](1._10-Bar_Truss_Sizing.md) was modified so the x and z positions of top right and top middle nodes were design variables. 
 
 Cofe example files are located here:
