--- a/docs/2._Examples/b._Optimization/3._Svanberg_Beam_Optimization.md
+++ b/docs/2._Examples/b._Optimization/3._Svanberg_Beam_Optimization.md
@@ -1,4 +1,5 @@
- The Svanberg beam model was developed for:
+# Svanberg Beam Optimization
+The Svanberg beam model was developed for:
  >  Svanberg, Krister. "The Method of Moving Asymptotes-A New Method for Structural Optimization." International Journal for Numerical Methods in Engineering 24.2 (1987): 359-373. 
 
 Cofe example files are located here:
