--- a/docs/2._Examples/b._Optimization/4._72-Bar_Truss_Optimization.md
+++ b/docs/2._Examples/b._Optimization/4._72-Bar_Truss_Optimization.md
@@ -1,3 +1,4 @@
+# 72-bar Truss Optimization
 The 72-bar truss model was developed for:
 > Fox, Richard L., and Lucien A. Schmit, JR. "Advances in the Integrated Approach to Structural Synthesis." Journal of Spacecraft and Rockets 3.6 (1966): 858-866. 
 
